[project]
name = "htexplorer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.2",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.33.1",
    "sentence-transformers>=5.4.1",
    "tqdm>=4.67.3",
]
